--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"test": "vitest --pool=forks",
-		"test:ui": "vitest --ui --pool=forks"
+		"test": "vitest --coverage --pool=forks",
+		"test:ui": "vitest --coverage --ui --pool=forks"
 	},
 	"dependencies": {
 		"@mdi/js": "^7.4.47",
@@ -28,12 +28,14 @@
 		"@types/react-dom": "^18.2.22",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
+		"@vitest/coverage-v8": "^1.6.0",
 		"@vitest/ui": "^1.6.0",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.6",
 		"jsdom": "^24.0.0",
+		"msw": "^2.3.0",
 		"postcss": "^8.4.38",
 		"prop-types": "^15.8.1",
 		"sass": "^1.77.1",
